--- a/src/locale/messages.tw.xlf
+++ b/src/locale/messages.tw.xlf
@@ -18,6 +18,14 @@
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="62bae80d2e762f5dd6dceadc89234b11715d0135" datatype="html">
+        <source>I&apos;m new</source>
+        <target>我是新的</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
